import grpc
from concurrent import futures
import grpc_pb2 as planner_pb2
import grpc_pb2_grpc as planner_pb2_grpc

class PlannerService(planner_pb2_grpc.PlannerServicer):
    def CalculateOptimalReplicas(self, request, context):
        # Fetch metrics from Prometheus, Kepler, Kserve, and external grid sources
        # Perform calculations to determine the optimal number of replicas
        # Return the calculated optimal replicas
        response = planner_pb2.CalculateOptimalReplicasResponse()
        for deployment in request.deployments:
            optimal_replicas = self.calculate_optimal_replicas(deployment, request.powerCap)
            deployment_replicas = planner_pb2.DeploymentReplicas(
                name=deployment.name,
                namespace=deployment.namespace,
                optimalReplicas=optimal_replicas
            )
            response.deploymentReplicas.append(deployment_replicas)
        return response

    def calculate_optimal_replicas(self, deployment, power_cap):
        # Implement the logic to calculate the optimal replicas based on metrics and power cap
        # This is just a placeholder, replace it with your actual calculation
        return 5

def serve():
    server = grpc.server(futures.ThreadPoolExecutor(max_workers=10))
    planner_pb2_grpc.add_PlannerServicer_to_server(PlannerService(), server)
    server.add_insecure_port('[::]:9999')
    server.start()
    server.wait_for_termination()

if __name__ == '__main__':
    serve()